# lempek-assets

./: .gitignore  Cargo.toml  build.sh
backend/: Cargo.toml  Rocket.toml  example.env
backend/.sqlx/: query-04e93de3f0ee826122750be1743255a0a00de4751160edf2271e06e038d6fc70.json  query-0b714986ab20466f2a86b42a8403639ee66491cd80176021c2c31c10b8edc712.json  query-1051e4756fc269b6f3730048341414239f291918377629e6c214180160a1023b.json  query-225da9d2c0ff0f137a95a9988671f7f15f74282e62bf3aefe91b8515c730ebfe.json  query-41a6dd8906883618521bf9165cd540f3fbaa1ff25859112667b5e5f1fd1e3397.json  query-4c1be0953b01ff5705473283ea4da63599c9bec6d247bb455d85a2f90cbf3ab1.json  query-514ecd5a6ad464a3493ca433d244b59242ad39210d38067f4d6cdc9979116b49.json  query-5402862aaad7a7fe91806bc32ec14722fd06375218baa4996f4a5927a3898432.json  query-653eda57cd20412a17a31e53d609a51986350840a815c158c7bf96888eda3305.json  query-6bd9244734b32e195859c842661ca8f80888aeb221159999bf97d3693f6653da.json  query-6de5a8b837b20e7b75fedecd0f6d665c6946406c9d3189d4f93536530f228c95.json  query-7eb2bcd15a571bd2b08c97525947ff7dce74d2e197c0472258cbab5b4aa625fd.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-8a83f6ee98feeb4a810b8223e8154703eaa20712910e0cf477d617fc15f5f498.json  query-8df823accc28ffe68b75951c1e2b40b8f2d13fa5175bce01e5098fec5584554a.json  query-8e24ddbf9c68350e78a3cf55c958479a19839106f146d59175465a35f5f616c6.json  query-a202722c8573e9ecba6eef15aa802a2c7ce21a081315b56b36ed16b2dbe2721c.json  query-eba66ba9a8f3be4e1f37aaea39385eebf04f3735a71474e1d38226c05bd17c70.json
(+92 files in other folders)
