[package]
name = "lempek-assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-multipart = "0.6.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
rand = "0.8.5"
proc-lempek-assets = { path = "./proc-lempek-assets" }