[package]
name = "lempek-assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-multipart = "0.6.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
rand = "0.8.5"
sqlx = "0.7.2"
chrono = "0.4.31"
proc-lempek-assets = { path = "./proc-lempek-assets" }