[package]
name = "lempek-assets-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "secrets"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
jsonwebtoken = "9.3.1"
bcrypt = "0.17"
dotenvy = "0.15.7"
uuid = { version = "1.17.0", features = ["serde", "v7"] }
chrono = { version = "0.4.41", features = ["serde"] }